Got basic select functionality working, and added search HTML

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </head>
 
 <body>
-<div class="choosin" data-value="United States">
+<div class="choosin" data-value="United States" debug>
   <button class="choosin__trigger">
     United States
   </button>
   <div class="choosin__ui-wrapper">
+    <div class="choosin__search-wrapper csn-search"></div>
     <ul class="choosin__dropdown csn-dropdown">
        <li class="csn-dropdown__option-wrapper">
         <button class="csn-dropdown__option" data-value="Afghanistan">
@@ -1253,6 +1254,7 @@
     United States
   </button>
   <div class="choosin__ui-wrapper">
+    <div class="choosin__search-wrapper csn-search"></div>
     <ul class="choosin__dropdown csn-dropdown">
        <li class="csn-dropdown__option-wrapper">
         <button class="csn-dropdown__option" data-value="Afghanistan">
