Lots of progress
Added keyboard navigation of options
Added ability to select option with Enter
Fixed option selecting code/behaviors, code wasn't clear or organized
Setup open/close to be a cleaner
Started makeSureOptionIsVisible, which will be a PITA
Added visibleOptionValues array as an easier way to track if options are hidden by search
Rewrote search, filter felt less helpful with the search array, vs value array, and other things that made things tidier to understand, but trickier to search.
Changed subscriber execution to Object.values, seems cleaner
Fixed error in state, mistook undefined for falsey

--- a/src/index.html
+++ b/src/index.html
@@ -2491,7 +2491,7 @@
   window.addEventListener('load', () => {
     const $choosin = document.querySelector('.choosin');
     $choosin.choosin.open();
-    $choosin.querySelector('input').value = 'unit';
+    // $choosin.querySelector('input').value = 'unit';
   });
 </script>
 
