Got things working with JS modules

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </style>
 
   <link href="choosin.css" rel="stylesheet">
-  <script src="choosin.js"></script>
+  <script src="choosin.js" type="module"></script>
 </head>
 
 <body>
