Converted choosin to a JS class and improved styling and UX

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
 <body>
 <div class="wrapper">
-  <div class="select-wrapper">
+  <div class="select-wrapper" style="display: none;">
     <select id="countries-control">
       <option value="Afghanistan">
           Afghanistan
