Added Choosin class docs and pulled out demo code

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   </style>
 
   <link href="choosin.css" rel="stylesheet">
-  <script src="choosin.js" type="module"></script>
+  <script src="demo.js" type="module"></script>
 </head>
 
 <body>
@@ -1517,12 +1517,5 @@
     </select>
   </div>
 </div>
-<script>
-  window.addEventListener('load', () => {
-    // const $choosin = document.querySelector('.choosin');
-    // $choosin.choosin.open();
-    // $choosin.querySelector('input').value = 'unit';
-  });
-</script>
 
 </body></html>
