Added more tests and dumbed down browser sync a bit

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,12 @@
   <title>Choosin Demo</title>
 
   <style>
+    html {
+      height: 100%;
+      overflow:auto;
+    }
     body {
+      height: 100%;
       margin: 0;
       padding: 20px 40px;
       font-size: 18px;
@@ -30,7 +35,7 @@
     }
 
     .wrapper {
-      margin: 1500px 0;
+      padding: 1500px 0;
     }
 
     .select-wrapper {
