Added check for initially selected option and test for search

--- a/src/upgraded-html-sample.html
+++ b/src/upgraded-html-sample.html
@@ -41,9 +41,10 @@
           Andorra
         </button>
       </li>
+
       <!-- Selected -->
       <li class="csn-optionList__item-wrapper">
-        <button class="csn-optionList__option" data-csn-hash="gzmdmwxg" data-value="United States">
+        <button aria-selected="true" class="csn-optionList__option" data-csn-hash="gzmdmwxg" data-value="United States">
           United States
         </button>
       </li>
