added codepen example to emmulate

--- a/src/upgraded-html-sample.html
+++ b/src/upgraded-html-sample.html
@@ -29,24 +29,18 @@
     <ul class="choosin__optionsList csn-optionList">
 
       <!-- Highlighted -->
-      <li class="csn-optionList__item-wrapper">
-        <button class="csn-optionList__option" data-csn-hash="gtgdjvmn" data-value="Afghanistan">
+      <li role="option" class="csn-optionList__option" data-csn-hash="gtgdjvmn" data-value="Afghanistan" >
           Afghanistan
-        </button>
       </li>
 
       <!-- Default -->
-      <li class="csn-optionList__item-wrapper">
-        <button class="csn-optionList__option" data-csn-hash="pdbbqu0s" data-value="Andorra">
+      <li role="option" class="csn-optionList__option" data-csn-hash="pdbbqu0s" data-value="Andorra">
           Andorra
-        </button>
       </li>
 
       <!-- Selected -->
-      <li class="csn-optionList__item-wrapper">
-        <button aria-selected="true" class="csn-optionList__option" data-csn-hash="gzmdmwxg" data-value="United States">
+      <li role="option" aria-selected="true" class="csn-optionList__option" data-csn-hash="gzmdmwxg" data-value="United States">
           United States
-        </button>
       </li>
     </ul>
   </div>
