added a11y bug fixes and instructions for how to update the component to work with assistive tech for sighted and non sighted users

--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,13 @@
 </head>
 
 <body>
+<main>
+<h1>Choosin Demo</h1>
+
 <div class="wrapper">
   <div class="select-wrapper" style="display: none;">
+    <!-- @todo: A11y note, User will need to provide a label for the input and list which will be used as the aria-label value on the input and the list -->
+    <h2>States</h2>
     <select id="countries-control">
       <option value="Afghanistan">
           Afghanistan
@@ -1522,5 +1527,6 @@
     </select>
   </div>
 </div>
+</main>
 
 </body></html>
