added codepen to references

--- a/src/upgraded-html-sample.html
+++ b/src/upgraded-html-sample.html
@@ -1,4 +1,8 @@
 <div class="choosin choosin--processed" data-csn-hash="uktx2tbp" data-value="United States">
+  <!-- @todo: A11y note, 
+    - feel free to reference this codepen https://codepen.io/kelsS/pen/mdzOKWj/1011b53939cd4364018ec50d4fba5762?editors=1010 
+    - reach out if you want to do a cowork session on these changes! 
+  -->
   <!-- @todo: A11y note - Move these states to the input itself -->
   <!-- Default Trigger State -->
   <!-- <button class="choosin__trigger">United States</button> -->
